--- a/plugins/kubernetes/app/views/kubernetes/roles/_form.html.erb
+++ b/plugins/kubernetes/app/views/kubernetes/roles/_form.html.erb
@@ -24,6 +24,13 @@
     </div>
 
     <div class="form-group">
+      <%= form.label :resource_name, class: "col-lg-2 control-label" %>
+      <div class="col-lg-4">
+        <%= form.text_field :resource_name, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
       <div class="col-lg-offset-2 col-lg-10">
         <% if current_user.admin_for?(@project) %>
           <%= form.submit @role.persisted? ? 'Save' : 'Create', class: "btn btn-primary" %>
